infra/IaC/vpc/main.tf
resource "aws_vpc" "dev_vpc" {
  cidr_block           = "172.31.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name    = "dev"
    Project = "terraform_study"
  }

}

resource "aws_subnet" "dev_public_subnet" {
  vpc_id                  = aws_vpc.dev_vpc.id
  cidr_block              = "172.31.0.0/16"
  map_public_ip_on_launch = true

  availability_zone = "us-east-1a"

  tags = {
    Name = "dev-public"
  }
}

resource "aws_route_table_association" "dev_public_assoc" {
  subnet_id      = aws_subnet.dev_public_subnet.id
  route_table_id = aws_route_table.dev_route_table.id
}

resource "aws_route_table" "dev_route_table" {
  vpc_id = aws_vpc.dev_vpc.id

  tags = {
    Name = "dev-rtb"
  }
}

resource "aws_route" "default_route" {
  route_table_id         = aws_route_table.dev_route_table.id
  gateway_id             = aws_internet_gateway.dev_internet_gateway.id
  destination_cidr_block = "0.0.0.0/0"
}

resource "aws_internet_gateway" "dev_internet_gateway" {
  vpc_id = aws_vpc.dev_vpc.id

  tags = {
    Name = "dev-igw"
  }
}
